--- a/pam_radius_virtual/Cargo.toml
+++ b/pam_radius_virtual/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
-name = "nss_virtual"
+name = "pam_radius_virtual"
 version = "0.1.0"
 authors = ["Nicolas goy <kuon@goyman.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-libc = "0.2.71"
-lazy_static = "1.4.0"
-libnss = "0.3.0"
-paste = "1.0.0"
+[dependencies.pamsm]
+version = "0.4.0"
+features = ["libpam"]
 
 [lib]
-name = "nss_virtual"
+name = "pam_radius_virtual"
 crate-type = [ "cdylib" ]
