--- a/radius_virtual/Cargo.toml
+++ b/radius_virtual/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "radius_client"
+name = "radius_virtual"
 version = "0.1.0"
 authors = ["Nicolas goy <kuon@goyman.com>"]
 edition = "2018"
@@ -8,8 +8,9 @@ edition = "2018"
 
 [dependencies]
 thiserror = "1.0.20"
+toml = "0.5.6"
+serde = {version = "1.0.114", features = ["derive"]}
 
 [build-dependencies]
 cc = "1.0.58"
-bindgen = "0.54.1"
 openssl-src = "111.10.2"
