--- a/pam_radius_virtual/Cargo.toml
+++ b/pam_radius_virtual/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 [dependencies.pamsm]
 version = "0.4.0"
 features = ["libpam"]
+
+[dependencies]
 radius_virtual = {path = "../radius_virtual"}
 
 [lib]
