--- a/radius_virtual/Cargo.toml
+++ b/radius_virtual/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0.20"
 toml = "0.5.6"
 serde = {version = "1.0.114", features = ["derive"]}
 base16 = "0.2.1"
+sqlite = "0.25.3"
 
 [build-dependencies]
 cc = "1.0.58"
