--- a/nss_db/Cargo.toml
+++ b/nss_db/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "radius_virtual"
+name = "nss_db"
 version = "0.1.0"
 authors = ["Nicolas goy <kuon@goyman.com>"]
 edition = "2018"
@@ -7,16 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0.20"
-toml = "0.5.6"
+common = {path = "../common"}
+radius = {path = "../radius"}
+log = "0.4.11"
+syslog = "5.0.0"
 serde = {version = "1.0.114", features = ["derive"]}
-base16 = "0.2.1"
 sqlite = "0.25.3"
 serde_cbor = "0.11.1"
-
-[build-dependencies]
-cc = "1.0.58"
-openssl-src = "111.10.2"
-
-[dev-dependencies]
-assert_matches = "1.3"
+toml = "0.5.6"
+thiserror = "1.0.20"
+rand = "0.7.3"
