--- a/pam_module/Cargo.toml
+++ b/pam_module/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nss_radius_virtual"
+name = "pam_module"
 version = "0.1.0"
 authors = ["Nicolas goy <kuon@goyman.com>"]
 edition = "2018"
@@ -7,12 +7,15 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libc = "0.2.71"
-lazy_static = "1.4.0"
-libnss = "0.3.0"
-paste = "1.0.0"
-radius_virtual = {path = "../radius_virtual"}
+log = "0.4.11"
+nss_db = {path = "../nss_db"}
+radius = {path = "../radius"}
+
+[dependencies.pamsm]
+#version = "0.4.0"
+path = "../pam_sm_rust"
+features = ["libpam"]
 
 [lib]
-name = "nss_radius_virtual"
+name = "pam_radius_virtual"
 crate-type = [ "cdylib" ]
