--- a/shell_wrapper/Cargo.toml
+++ b/shell_wrapper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "radius_client"
+name = "shell_wrapper"
 version = "0.1.0"
 authors = ["Nicolas goy <kuon@goyman.com>"]
 edition = "2018"
@@ -7,11 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-radius_virtual = {path = "../radius_virtual"}
-structopt = "0.3.15"
+nss_db = {path = "../nss_db"}
 anyhow = "1.0.32"
-serde_json = "1.0.57"
+nix = "0.18.0"
+
 
 [[bin]]
-name = "radius_auth_client"
+name = "radius_shell"
 path = "src/main.rs"
