--- a/pam_module/Cargo.toml
+++ b/pam_module/Cargo.toml
@@ -12,8 +12,7 @@ nss_db = {path = "../nss_db"}
 radius = {path = "../radius"}
 
 [dependencies.pamsm]
-#version = "0.4.0"
-path = "../pam_sm_rust"
+version = "0.4.1"
 features = ["libpam"]
 
 [lib]
